# SMT-GA

./: README.md
GA_ST_CORE/: Aux.cpp  Aux.h  CMakeLists.txt  GA.cpp  GA.h  GA_ST_CORE.cbp  GA_ST_CORE.depend  GA_ST_CORE.layout  Grafo.cpp  Grafo.h  Individuo.cpp  Individuo.h  Populacao.cpp  Populacao.h  Vertice.cpp  Vertice.h  main.cpp
GA_ST_CORE/doxygen/: doxyfile
GA_ST_CORE/grafos/problemas/: estein10.10  estein10.13  estein10.15  estein10.2  estein10.3  estein10.4  estein10.6  estein10.7  estein100.11  estein100.12  estein100.13  estein100.2  estein100.5  estein100.6  estein100.8  estein100.9  estein1000.1  estein1000.12  estein1000.13  estein1000.14  estein1000.15  estein1000.2  estein1000.4  estein1000.6  estein1000.7  estein10000.1  estein20.10  estein20.11  estein20.12  estein20.13  estein20.14  estein20.2  estein20.6  estein20.7  estein20.9  estein250.1  estein250.10  estein250.12  estein250.14  estein250.15  (+49 more)
GA_ST_CORE/grafos/solucoes/: estein10.1  estein10.10  estein10.11  estein10.12  estein10.14  estein10.15  estein10.5  estein10.6  estein10.8  estein10.9  estein100.10  estein100.2  estein100.3  estein100.5  estein100.6  estein20.1  estein20.10  estein20.11  estein20.12  estein20.13  estein20.15  estein20.2  estein20.5  estein30.11  estein30.12  estein30.13  estein30.14  estein30.15  estein30.2  estein30.3  estein30.4  estein40.1  estein40.11  estein40.12  estein40.14  estein40.3  estein40.4  estein40.9  estein50.1  estein50.10  (+37 more)
GA_ST_CORE/saida/: .txt  saida.txt
GA_ST_GUI/: GA_SMT_CORE  GA_ST_GUI.pro  GA_ST_GUI.pro.user.6405032  GA_ST_GUI.sh  Makefile  (+15 more)
(+194 files in other folders)
